# Fractal3D

./: Frac  Fractal 3D.pro  Makefile  moc_frac.cpp
C/Fractal 3D/src/: calc3d.cpp  initCL.cpp
C/Oscillateur/: CMakeLists.txt
C/Oscillateur/include/: oscillateur.h
C/Oscillateur/src/: init.c  main.c
include/: frac.h
input/: input.txt
openCL/: frac.cl
src/: Camera.cpp  Light.cpp  Plan.cpp  Ray.cpp  Sphere.cpp  ViewPoint.cpp  Window.cpp  calc.cpp  calc3d.cpp  init.cpp  loop.cpp  main.cpp  move.cpp
